clocksource: Add FM4 Dual Timer clock event driver
Signed-off-by: Andreas Färber <afaerber@suse.de>

--- a/arch/arm/Kconfig
+++ b/arch/arm/Kconfig
@@ -871,6 +871,7 @@ config ARCH_FM4
 	depends on ARM_SINGLE_ARMV7M
 	select ARCH_HAS_RESET_CONTROLLER
 	select ARMV7M_SYSTICK
+	select CLKSRC_FM4
 	select RESET_CONTROLLER
 	help
 	  Support for Spansion (formerly Fujitsu, now Cypress) FM4 processors.
