--- a/drivers/tty/serial/Kconfig
+++ b/drivers/tty/serial/Kconfig
@@ -1502,6 +1502,20 @@ config SERIAL_EFM32_UART_CONSOLE
 	depends on SERIAL_EFM32_UART=y
 	select SERIAL_CORE_CONSOLE
 
+config SERIAL_FM4_MFS
+	tristate "FM4 MFS UART port"
+	depends on ARM && (ARCH_FM4 || COMPILE_TEST)
+	select SERIAL_CORE
+	help
+	  This driver supports the MFS UART ports on
+	  Cypress' FM4 SoCs.
+
+config SERIAL_FM4_MFS_CONSOLE
+	bool "FM4 MFS UART console support"
+	depends on SERIAL_FM4_MFS=y
+	select SERIAL_CORE_CONSOLE
+	select SERIAL_EARLYCON
+
 config SERIAL_TILEGX
 	tristate "TILE-Gx on-chip serial port support"
 	depends on TILEGX
