--- a/arch/arm/boot/dts/fm4.dtsi
+++ b/arch/arm/boot/dts/fm4.dtsi
@@ -47,6 +47,134 @@
 			interrupt-controller;
 			#interrupt-cells = <2>;
 		};
+
+		mfs0: serial@40038000 {
+			compatible = "cypress,fm4-mfs";
+			reg = <0x40038000 0x100>;
+			clocks = <&cgu 4>;
+			interrupts = <60 0>, <61 0>;
+			status = "disabled";
+		};
+
+		mfs1: serial@40038100 {
+			compatible = "cypress,fm4-mfs";
+			reg = <0x40038100 0x100>;
+			clocks = <&cgu 4>;
+			interrupts = <62 0>, <63 0>;
+			status = "disabled";
+		};
+
+		mfs2: serial@40038200 {
+			compatible = "cypress,fm4-mfs";
+			reg = <0x40038200 0x100>;
+			clocks = <&cgu 4>;
+			interrupts = <64 0>, <65 0>;
+			status = "disabled";
+		};
+
+		mfs3: serial@40038300 {
+			compatible = "cypress,fm4-mfs";
+			reg = <0x40038300 0x100>;
+			clocks = <&cgu 4>;
+			interrupts = <66 0>, <67 0>;
+			status = "disabled";
+		};
+
+		mfs4: serial@40038400 {
+			compatible = "cypress,fm4-mfs";
+			reg = <0x40038400 0x100>;
+			clocks = <&cgu 4>;
+			interrupts = <68 0>, <69 0>;
+			status = "disabled";
+		};
+
+		mfs5: serial@40038500 {
+			compatible = "cypress,fm4-mfs";
+			reg = <0x40038500 0x100>;
+			clocks = <&cgu 4>;
+			interrupts = <70 0>, <71 0>;
+			status = "disabled";
+		};
+
+		mfs6: serial@40038600 {
+			compatible = "cypress,fm4-mfs";
+			reg = <0x40038600 0x100>;
+			clocks = <&cgu 4>;
+			interrupts = <72 0>, <73 0>;
+			status = "disabled";
+		};
+
+		mfs7: serial@40038700 {
+			compatible = "cypress,fm4-mfs";
+			reg = <0x40038700 0x100>;
+			clocks = <&cgu 4>;
+			interrupts = <74 0>, <75 0>;
+			status = "disabled";
+		};
+
+		mfs8: serial@40038800 {
+			compatible = "cypress,fm4-mfs";
+			reg = <0x40038800 0x100>;
+			clocks = <&cgu 4>;
+			interrupts = <103 0>, <104 0>;
+			status = "disabled";
+		};
+
+		mfs9: serial@40038900 {
+			compatible = "cypress,fm4-mfs";
+			reg = <0x40038900 0x100>;
+			clocks = <&cgu 4>;
+			interrupts = <105 0>, <106 0>;
+			status = "disabled";
+		};
+
+		mfs10: serial@40038a00 {
+			compatible = "cypress,fm4-mfs";
+			reg = <0x40038a00 0x100>;
+			clocks = <&cgu 4>;
+			interrupts = <107>, <108>;
+			status = "disabled";
+		};
+
+		mfs11: serial@40038b00 {
+			compatible = "cypress,fm4-mfs";
+			reg = <0x40038b00 0x100>;
+			clocks = <&cgu 4>;
+			interrupts = <109 0>, <110 0>;
+			status = "disabled";
+		};
+
+		mfs12: serial@40038c00 {
+			compatible = "cypress,fm4-mfs";
+			reg = <0x40038c00 0x100>;
+			clocks = <&cgu 4>;
+			interrupts = <120 0>, <121 0>;
+			status = "disabled";
+		};
+
+		mfs13: serial@40038d00 {
+			compatible = "cypress,fm4-mfs";
+			reg = <0x40038d00 0x100>;
+			clocks = <&cgu 4>;
+			interrupts = <122 0>, <123 0>;
+			status = "disabled";
+		};
+
+		mfs14: serial@40038e00 {
+			compatible = "cypress,fm4-mfs";
+			reg = <0x40038e00 0x100>;
+			clocks = <&cgu 4>;
+			interrupts = <124 0>, <125 0>;
+			status = "disabled";
+		};
+
+		mfs15: serial@40038f00 {
+			compatible = "cypress,fm4-mfs";
+			reg = <0x40038f00 0x100>;
+			clocks = <&cgu 4>;
+			interrupts = <126 0>, <127 0>;
+			status = "disabled";
+		};
 	};
 };
 
