ARM: dts: Enable MFS ch.0 for fm4-s6e2cc-sk-176l-eth
Signed-off-by: Andreas Färber <afaerber@suse.de>

--- a/arch/arm/boot/dts/fm4-s6e2cc-sk-176l-eth.dts
+++ b/arch/arm/boot/dts/fm4-s6e2cc-sk-176l-eth.dts
@@ -14,8 +14,13 @@
 	model = "Cypress SK-FM4-176L-S6E2CC-ETH";
 	compatible = "cypress,fm4";
 
+	aliases {
+		serial0 = &mfs0;
+	};
+
 	chosen {
-		bootargs = "earlycon";
+		bootargs = "console=ttyFM0,115200n8 earlycon ignore_loglevel ihash_entries=64 dhash_entries=64 uclinux.physaddr=0x00180000 root=/dev/mtdblock0 init=/sbin/init";
+		stdout-path = "serial0:115200n8";
 	};
 
 	memory@60000000 {
@@ -38,4 +43,8 @@
 &cgu {
 	clocks = <&main_osc>, <&sub_osc>;
 	clock-names = "CLKMO", "CLKSO";
+};
+
+&mfs0 {
+	status = "okay";
 };
