Prepare for assigning CAN clock
Signed-off-by: Andreas Färber <afaerber@suse.de>

--- a/arch/arm/boot/dts/fm4-s6e2cc-sk-176l-eth.dts
+++ b/arch/arm/boot/dts/fm4-s6e2cc-sk-176l-eth.dts
@@ -40,6 +40,11 @@
 	};
 };
 
+/*&can_prescaler {
+	assigned-clocks = <&can_prescaler>;
+	assigned-clock-rates = <40000000>;
+};*/
+
 &cgu {
 	clocks = <&main_osc>, <&sub_osc>;
 	clock-names = "CLKMO", "CLKSO";
