ARM: dts: Add interrupt controller node
Signed-off-by: Andreas Färber <afaerber@suse.de>

--- a/arch/arm/boot/dts/fm4.dtsi
+++ b/arch/arm/boot/dts/fm4.dtsi
@@ -25,6 +25,15 @@
 	};
 
 	soc {
+		interrupt-parent = <&intc>;
+
+		intc: interrupt-controller@40031000 {
+			compatible = "cypress,fm4-intc";
+			reg = <0x40031000 0x1000>;
+			interrupt-parent = <&nvic>;
+			interrupt-controller;
+			#interrupt-cells = <2>;
+		};
 	};
 };
 
