ARM: dts: fm4: Set #gpio-cells
Signed-off-by: Andreas Färber <afaerber@suse.de>

--- a/arch/arm/boot/dts/fm4.dtsi
+++ b/arch/arm/boot/dts/fm4.dtsi
@@ -209,9 +209,10 @@
 			status = "disabled";
 		};
 
-		pinctrl: pinctrl@4006f000 {
+		gpio: pinctrl: pinctrl@4006f000 {
 			compatible = "cypress,fm4-gpio";
 			reg = <0x4006f000 0x1000>;
+			#gpio-cells = <3>;
 		};
 
 		can_fd: can@40070000 {
