ARM: dts: Add TX LED
Signed-off-by: Andreas Färber <afaerber@suse.de>

--- a/arch/arm/boot/dts/fm4-s6e2cc-sk-176l-eth.dts
+++ b/arch/arm/boot/dts/fm4-s6e2cc-sk-176l-eth.dts
@@ -59,6 +59,12 @@
 			default-state = "on";
 			/*linux,default-trigger = "heartbeat";*/
 		};
+
+		tx {
+			label = "tx:yellow";
+			gpios = <&gpio 0x6 0xe GPIO_ACTIVE_LOW>;
+			default-state = "off";
+		};
 	};
 };
 
