ARM: dts: ETH attempts
Signed-off-by: Andreas Färber <afaerber@suse.de>

--- a/arch/arm/boot/dts/fm4-s6e2cc-sk-176l-eth.dts
+++ b/arch/arm/boot/dts/fm4-s6e2cc-sk-176l-eth.dts
@@ -92,6 +92,15 @@
 
 &ethernet0 {
 	status = "okay";
+	snps,reset-gpio = <&gpio 0x6 0xa GPIO_ACTIVE_LOW>;
+	snps,reset-active-low;
+	snps,reset-delays-us = <0 10000 1000000>;
+	phy-mode = "mii";
+	phy-handle = <&phy>;
+
+	phy: ethernet-phy@7 {
+		reg = <7>;
+	};
 };
 
 &mfs0 {
