Switch Ethernet PHY nRST to P65
Signed-off-by: Andreas Färber <afaerber@suse.de>

--- a/arch/arm/boot/dts/fm4-s6e2cc-sk-176l-eth.dts
+++ b/arch/arm/boot/dts/fm4-s6e2cc-sk-176l-eth.dts
@@ -93,7 +93,7 @@
 
 &ethernet0 {
 	status = "okay";
-	snps,reset-gpio = <&gpio 0x6 0xa GPIO_ACTIVE_LOW>;
+	snps,reset-gpio = <&gpio 0x6 0x5 GPIO_ACTIVE_LOW>;
 	snps,reset-active-low;
 	snps,reset-delays-us = <0 10000 1000000>;
 	phy-mode = "mii";
